examples/Passing/If/missing_return2.c
int main() {
    if (5 > 6) 
        return 5;
}
