examples/Failing/Binary2/fail_lt.c
int main () 
    return 5 < 6;
    }
